--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -1,88 +1,113 @@
 
 .icon-angle-right:before { content: '\e800'; } /* '' */
 .icon-angle-left:before { content: '\e801'; } /* '' */
-.icon-user-walking:before { content: '\e802'; } /* '' */
-.icon-users:before { content: '\e803'; } /* '' */
-.icon-arobat:before { content: '\e804'; } /* '' */
-.icon-arrow-left-rounded:before { content: '\e805'; } /* '' */
+.icon-arobat:before { content: '\e802'; } /* '' */
+.icon-arrow-left-rounded:before { content: '\e803'; } /* '' */
+.icon-planet:before { content: '\e804'; } /* '' */
+.icon-arrow-right:before { content: '\e805'; } /* '' */
 .icon-arrow-left:before { content: '\e806'; } /* '' */
-.icon-arrow-right:before { content: '\e807'; } /* '' */
-.icon-barcode:before { content: '\e808'; } /* '' */
-.icon-bell:before { content: '\e809'; } /* '' */
-.icon-birthday:before { content: '\e80a'; } /* '' */
-.icon-bookmark-star:before { content: '\e80b'; } /* '' */
-.icon-bookmark:before { content: '\e80c'; } /* '' */
-.icon-calendar:before { content: '\e80d'; } /* '' */
-.icon-camera-empty:before { content: '\e80e'; } /* '' */
-.icon-camera:before { content: '\e80f'; } /* '' */
-.icon-cancel:before { content: '\e810'; } /* '' */
-.icon-chat-bubble-duo:before { content: '\e811'; } /* '' */
-.icon-chat-bubble:before { content: '\e812'; } /* '' */
-.icon-check:before { content: '\e813'; } /* '' */
-.icon-cog:before { content: '\e814'; } /* '' */
-.icon-chat-read:before { content: '\e815'; } /* '' */
-.icon-direction:before { content: '\e816'; } /* '' */
-.icon-clock-empty:before { content: '\e817'; } /* '' */
-.icon-education:before { content: '\e818'; } /* '' */
-.icon-facebook:before { content: '\e819'; } /* '' */
-.icon-feather:before { content: '\e81a'; } /* '' */
-.icon-female:before { content: '\e81b'; } /* '' */
-.icon-filters:before { content: '\e81c'; } /* '' */
-.icon-flag:before { content: '\e81d'; } /* '' */
-.icon-forward:before { content: '\e81e'; } /* '' */
-.icon-gender:before { content: '\e81f'; } /* '' */
-.icon-geoloc:before { content: '\e820'; } /* '' */
-.icon-clock:before { content: '\e821'; } /* '' */
-.icon-code:before { content: '\e822'; } /* '' */
-.icon-heart:before { content: '\e823'; } /* '' */
-.icon-info:before { content: '\e824'; } /* '' */
-.icon-line:before { content: '\e825'; } /* '' */
-.icon-location-barred:before { content: '\e826'; } /* '' */
-.icon-location:before { content: '\e827'; } /* '' */
-.icon-headphones:before { content: '\e828'; } /* '' */
-.icon-gift:before { content: '\e829'; } /* '' */
-.icon-mail:before { content: '\e82a'; } /* '' */
-.icon-main-picture:before { content: '\e82b'; } /* '' */
-.icon-male:before { content: '\e82c'; } /* '' */
-.icon-mask:before { content: '\e82d'; } /* '' */
-.icon-meepass:before { content: '\e82e'; } /* '' */
-.icon-members:before { content: '\e82f'; } /* '' */
-.icon-menu-app:before { content: '\e830'; } /* '' */
-.icon-menu:before { content: '\e831'; } /* '' */
-.icon-moon:before { content: '\e832'; } /* '' */
-.icon-network:before { content: '\e833'; } /* '' */
-.icon-newsletter:before { content: '\e834'; } /* '' */
-.icon-pen:before { content: '\e835'; } /* '' */
-.icon-pending-vertical:before { content: '\e836'; } /* '' */
-.icon-meedrink:before { content: '\e837'; } /* '' */
-.icon-pin:before { content: '\e838'; } /* '' */
-.icon-planet-empty:before { content: '\e839'; } /* '' */
-.icon-dj:before { content: '\e83a'; } /* '' */
-.icon-play:before { content: '\e83b'; } /* '' */
-.icon-plus:before { content: '\e83c'; } /* '' */
-.icon-pricetag:before { content: '\e83d'; } /* '' */
-.icon-profile-rounded:before { content: '\e83e'; } /* '' */
-.icon-question-mark:before { content: '\e83f'; } /* '' */
-.icon-refresh:before { content: '\e840'; } /* '' */
-.icon-search-light:before { content: '\e841'; } /* '' */
-.icon-search-planet:before { content: '\e842'; } /* '' */
-.icon-search-zoom:before { content: '\e843'; } /* '' */
-.icon-star:before { content: '\e844'; } /* '' */
-.icon-switch:before { content: '\e845'; } /* '' */
-.icon-telescope:before { content: '\e846'; } /* '' */
-.icon-thunder-left:before { content: '\e847'; } /* '' */
-.icon-thunder-right:before { content: '\e848'; } /* '' */
-.icon-trash:before { content: '\e849'; } /* '' */
-.icon-twitter:before { content: '\e84a'; } /* '' */
-.icon-upload:before { content: '\e84b'; } /* '' */
-.icon-crown:before { content: '\e84c'; } /* '' */
-.icon-planet:before { content: '\e84d'; } /* '' */
-.icon-pending:before { content: '\e84e'; } /* '' */
+.icon-barcode:before { content: '\e807'; } /* '' */
+.icon-bell:before { content: '\e808'; } /* '' */
+.icon-birthday-cake-empty:before { content: '\e809'; } /* '' */
+.icon-birthday-empty:before { content: '\e80a'; } /* '' */
+.icon-birthday:before { content: '\e80b'; } /* '' */
+.icon-bookmark-star:before { content: '\e80c'; } /* '' */
+.icon-bookmark:before { content: '\e80d'; } /* '' */
+.icon-calendar-empty:before { content: '\e80e'; } /* '' */
+.icon-calendar:before { content: '\e80f'; } /* '' */
+.icon-camera-empty:before { content: '\e810'; } /* '' */
+.icon-camera:before { content: '\e811'; } /* '' */
+.icon-cancel:before { content: '\e812'; } /* '' */
+.icon-chat-bubble-duo:before { content: '\e813'; } /* '' */
+.icon-chat-read:before { content: '\e814'; } /* '' */
+.icon-check:before { content: '\e815'; } /* '' */
+.icon-clock-empty:before { content: '\e816'; } /* '' */
+.icon-clock:before { content: '\e817'; } /* '' */
+.icon-code:before { content: '\e818'; } /* '' */
+.icon-cog-empty:before { content: '\e819'; } /* '' */
+.icon-cog:before { content: '\e81a'; } /* '' */
+.icon-create-before:before { content: '\e81b'; } /* '' */
+.icon-cross-fat:before { content: '\e81c'; } /* '' */
+.icon-cross-medium:before { content: '\e81d'; } /* '' */
+.icon-cross-thin:before { content: '\e81e'; } /* '' */
+.icon-crown:before { content: '\e81f'; } /* '' */
+.icon-direction:before { content: '\e820'; } /* '' */
+.icon-dj-empty:before { content: '\e821'; } /* '' */
+.icon-dj:before { content: '\e822'; } /* '' */
+.icon-education-empty:before { content: '\e823'; } /* '' */
+.icon-education:before { content: '\e824'; } /* '' */
+.icon-chat-bubble-empty:before { content: '\e825'; } /* '' */
+.icon-facebook:before { content: '\e826'; } /* '' */
+.icon-planet-empty:before { content: '\e827'; } /* '' */
+.icon-filters:before { content: '\e828'; } /* '' */
+.icon-flag-empty:before { content: '\e829'; } /* '' */
+.icon-flag:before { content: '\e82a'; } /* '' */
+.icon-forward:before { content: '\e82b'; } /* '' */
+.icon-gender-empty-ter:before { content: '\e82c'; } /* '' */
+.icon-gender-empty:before { content: '\e82d'; } /* '' */
+.icon-gender:before { content: '\e82e'; } /* '' */
+.icon-geoloc:before { content: '\e82f'; } /* '' */
+.icon-gift:before { content: '\e830'; } /* '' */
+.icon-headphones:before { content: '\e831'; } /* '' */
+.icon-heart:before { content: '\e832'; } /* '' */
+.icon-inbox:before { content: '\e833'; } /* '' */
+.icon-info:before { content: '\e834'; } /* '' */
+.icon-line:before { content: '\e835'; } /* '' */
+.icon-location-barred-empty:before { content: '\e836'; } /* '' */
+.icon-location-barred:before { content: '\e837'; } /* '' */
+.icon-location-empty:before { content: '\e838'; } /* '' */
+.icon-location:before { content: '\e839'; } /* '' */
+.icon-mail-empty:before { content: '\e83a'; } /* '' */
+.icon-mail:before { content: '\e83b'; } /* '' */
+.icon-main-picture:before { content: '\e83c'; } /* '' */
+.icon-male:before { content: '\e83d'; } /* '' */
+.icon-mask:before { content: '\e83e'; } /* '' */
+.icon-match:before { content: '\e83f'; } /* '' */
+.icon-meedrink-empty:before { content: '\e840'; } /* '' */
+.icon-meedrink:before { content: '\e841'; } /* '' */
+.icon-meepass:before { content: '\e842'; } /* '' */
+.icon-members:before { content: '\e843'; } /* '' */
+.icon-menu-app:before { content: '\e844'; } /* '' */
+.icon-menu:before { content: '\e845'; } /* '' */
+.icon-moon:before { content: '\e846'; } /* '' */
+.icon-network:before { content: '\e847'; } /* '' */
+.icon-newsletter-empty:before { content: '\e848'; } /* '' */
+.icon-newsletter:before { content: '\e849'; } /* '' */
+.icon-pen:before { content: '\e84a'; } /* '' */
+.icon-pending-vertical:before { content: '\e84b'; } /* '' */
+.icon-pending:before { content: '\e84c'; } /* '' */
+.icon-pin:before { content: '\e84d'; } /* '' */
+.icon-planet-empty-bis:before { content: '\e84e'; } /* '' */
 .icon-angle-up:before { content: '\e84f'; } /* '' */
 .icon-angle-down:before { content: '\e850'; } /* '' */
-.icon-match:before { content: '\e851'; } /* '' */
-.icon-power:before { content: '\e852'; } /* '' */
-.icon-cross-medium:before { content: '\e853'; } /* '' */
-.icon-cross-thin:before { content: '\e854'; } /* '' */
-.icon-cross-fat:before { content: '\e855'; } /* '' */
-.icon-create-before:before { content: '\e856'; } /* '' */
+.icon-play:before { content: '\e851'; } /* '' */
+.icon-plus:before { content: '\e852'; } /* '' */
+.icon-power:before { content: '\e853'; } /* '' */
+.icon-pricetag-empty:before { content: '\e854'; } /* '' */
+.icon-pricetag:before { content: '\e855'; } /* '' */
+.icon-profile-rounded-empty:before { content: '\e856'; } /* '' */
+.icon-profile-rounded:before { content: '\e857'; } /* '' */
+.icon-question-mark:before { content: '\e858'; } /* '' */
+.icon-refresh-bis:before { content: '\e859'; } /* '' */
+.icon-refresh-third:before { content: '\e85a'; } /* '' */
+.icon-refresh:before { content: '\e85b'; } /* '' */
+.icon-round-arrow-left:before { content: '\e85c'; } /* '' */
+.icon-search-light:before { content: '\e85d'; } /* '' */
+.icon-search-planet:before { content: '\e85e'; } /* '' */
+.icon-search-zoom:before { content: '\e85f'; } /* '' */
+.icon-star-empty:before { content: '\e860'; } /* '' */
+.icon-star:before { content: '\e861'; } /* '' */
+.icon-switch:before { content: '\e862'; } /* '' */
+.icon-telescope:before { content: '\e863'; } /* '' */
+.icon-thunder-empty:before { content: '\e864'; } /* '' */
+.icon-thunder-left:before { content: '\e865'; } /* '' */
+.icon-thunder-right:before { content: '\e866'; } /* '' */
+.icon-trash:before { content: '\e867'; } /* '' */
+.icon-twitter:before { content: '\e868'; } /* '' */
+.icon-upload:before { content: '\e869'; } /* '' */
+.icon-user-walking:before { content: '\e86a'; } /* '' */
+.icon-users-empty:before { content: '\e86b'; } /* '' */
+.icon-users:before { content: '\e86c'; } /* '' */
+.icon-feather:before { content: '\e86d'; } /* '' */
+.icon-female:before { content: '\e86e'; } /* '' */
+.icon-chat-read-empty:before { content: '\e86f'; } /* '' */
