--- a/public/css/lib/pikadate/pikadate.css
+++ b/public/css/lib/pikadate/pikadate.css
@@ -17,7 +17,6 @@
    background: #fff;
    border: 1px solid #ccc;
    border-bottom-color: #bbb;
-   font-family: 'Alegreya sans';
    padding: 16px;
 }
 
@@ -89,7 +88,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
    opacity: 0;
 }
 
-.pika-prev,
+.pika-prev, 
 .pika-next {
    display: block;
    cursor: pointer;
@@ -100,16 +99,16 @@ http://nicolasgallagher.com/micro-clearfix-hack/
    width: 20px;
    height: 30px;
     /* hide text using text-indent trick, using width value (it's enough) */
-    text-indent: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    background-color: transparent;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 75% 75%;
-    opacity: .5;
-    position: absolute;
-    top: 0;
+   text-indent: 20px;
+   white-space: nowrap;
+   overflow: hidden;
+   background-color: transparent;
+   background-position: center center;
+   background-repeat: no-repeat;
+   background-size: 75% 75%;
+   opacity: .5;
+   position: absolute;
+   top: -10px;
 }
 
 .pika-prev:hover,
