--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -147,7 +147,9 @@
     flex-shrink: 0;
 }
 
-.landing-privacy h3 {}
+.landing-privacy h3 {
+    margin-top: 10px;
+}
 
 .landing-neverpublish {
     font-size: 12px;
@@ -165,6 +167,7 @@
     flex-shrink: 0;
     width: 260px;
     height: 46px;
+    text-align: center;
 }
 
 .landing-connexion button {
@@ -184,6 +187,7 @@
     width: 100%;
     height: 50px;
     position: fixed;
+    left: 0;
     bottom: 0;
     display: flex;
     align-items: center;
@@ -204,15 +208,24 @@
     text-decoration: underline;
 }
 
-.landing-footer__item span {}
+.landing-footer__item span {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    display: block;
+}
 
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
    
    .multi-landing {
        padding: 15px;
    }
-
+  
+   .landing-logo {
+     width: 30px;
+   }
+   
    .landing-screenshots {
         width: 28%;
         height: 70%;
@@ -253,6 +266,10 @@
    .landing-connexion button {
        width: 210px;
        font-size: 14px;
+   }
+
+   .landing-footer__item span {
+     max-width: 50px;
    }
 
 }
