--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -192,7 +192,7 @@
         <li class="menu-item x--profile" data-link="profile">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-profile-rounded"></i>
+              <i class="icon icon-profile-rounded-empty"></i>
             </div>
             <h3 data-lid="menu_profile"></h2>
           </div>
@@ -210,7 +210,7 @@
         <li class="menu-item x--cheers" data-link="cheers">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-meedrink"></i>
+              <i class="icon icon-meedrink-empty"></i>
             </div>
             <h3 data-lid="menu_cheers"></h2>
           </div>
@@ -219,7 +219,7 @@
         <li class="menu-item x--friends" data-link="friends">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-users"></i>
+              <i class="icon icon-users-empty"></i>
             </div>
             <h3 data-lid="menu_friends"></h2>
           </div>
@@ -228,7 +228,7 @@
         <li class="menu-item x--settings" data-link="settings">
           <div class="menu-item__body">
             <div class="menu-item__icon">
-              <i class="icon icon-cog x--round-icon"></i>
+              <i class="icon icon-cog-empty x--round-icon"></i>
             </div>
             <h3 data-lid="menu_settings"></h2>
           </div>
@@ -255,7 +255,7 @@
         <div class="me">
           <div class="me-item" data-param="name">
             <div class="icon-item">
-              <i class="icon icon-pricetag"></i>
+              <i class="icon icon-pricetag-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -276,7 +276,7 @@
           </div>
           <div class="me-item" data-param="age">
             <div class="icon-item x--round-icon">
-              <i class="icon icon-birthday"></i>
+              <i class="icon icon-birthday-cake-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -297,7 +297,7 @@
           </div>
           <div class="me-item x--no-edit">
             <div class="icon-item">
-              <i class="icon icon-flag"></i>
+              <i class="icon icon-flag-empty"></i>
             </div>
             <div class="me-item-body">
               <label for="me__country" data-lid="p_country_label"></label>
@@ -307,7 +307,7 @@
           </div>
           <div class="me-item" data-param="job">
             <div class="icon-item x--round-icon">
-              <i class="icon icon-education"></i>
+              <i class="icon icon-education-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -328,7 +328,7 @@
           </div>
           <div class="me-item" data-param="location">
             <div class="icon-item">
-              <i class="icon icon-location-barred"></i>
+              <i class="icon icon-location-barred-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -349,7 +349,7 @@
           </div>
           <div class="me-item" data-param="ideal_night">
             <div class="icon-item">
-              <i class="icon icon-dj"></i>
+              <i class="icon icon-dj-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -434,7 +434,7 @@
           <div class="settings-item x--no-border" data-settings-type-id="contact_email">
             <div class="settings-input">
               <div class="settings-input__icon x--round-icon">
-                <i class="icon icon-arobat"></i>
+                <i class="icon icon-inbox"></i>
               </div>
               <div class="settings-input-label">
                 <input readonly placeholder="ben@mymail.com" id="settings__contact-email" type="text">
@@ -501,7 +501,7 @@
           </div> -->
           <div class="settings-item" data-settings-type-id="newsletter">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-mail"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-mail-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_notifs_newsletter_label"></div>
               </div>
@@ -536,7 +536,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_message">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-bubble"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-bubble-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_message_label"></div>
               </div>
@@ -549,7 +549,7 @@
           </div>
         <div class="settings-item" data-settings-type-id="marked_as_host">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-star"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-star-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_marked_as_host_label"></div>
               </div>
@@ -562,7 +562,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_match">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-thunder-right"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-thunder-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_match_label"></div>
               </div>
@@ -575,7 +575,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_cheers">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-meedrink"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-meedrink-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_cheers_label"></div>
               </div>
@@ -594,7 +594,7 @@
         <div class="settings x--ux" data-link="ux">
           <div class="settings-item" data-settings-type-id="message_seen">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-read"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-read-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_message_seen_label"></div>
               </div>
@@ -607,7 +607,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="show_gender">
             <div class="settings-input">
-            <div class="settings-input__icon x--round-icon"><i class="icon icon-gender"></i></div>
+            <div class="settings-input__icon x--round-icon"><i class="icon icon-gender-empty-ter"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_gender_label" ></div>
               </div>
@@ -620,7 +620,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="show_country">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-planet"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-planet-empty-bis"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_country_label"></div>
               </div> 
@@ -633,7 +633,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="auto_login">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-refresh"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-refresh-bis"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_auto_login_label"></div>
               </div>
@@ -646,9 +646,9 @@
           </div>
           <div class="settings-item">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-flag"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-flag-empty"></i></div>
               <div class="settings-input-label">
-                <div class="settings-input__label" data-lid="settings_ux_changelang_label"></div>
+                <div class="settings-input__label x--settings-btn" data-lid="settings_ux_changelang_label"></div>
               </div>
                <button class="settings__button x--changelang js-changelang" data-lid="settings_ux_changelang_button"></button>
             </div>
