--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -152,7 +152,7 @@
         <li class="menu-item x--profile" data-link="profile">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-profile-rounded"></i>
+              <i class="icon icon-profile-rounded-empty"></i>
             </div>
             <h3 data-lid="menu_profile"></h2>
           </div>
@@ -170,7 +170,7 @@
         <li class="menu-item x--cheers" data-link="cheers">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-meedrink"></i>
+              <i class="icon icon-meedrink-empty"></i>
             </div>
             <h3 data-lid="menu_cheers"></h2>
           </div>
@@ -179,7 +179,7 @@
         <li class="menu-item x--friends" data-link="friends">
           <div class="menu-item__body">
             <div class="menu-item__icon x--round-icon">
-              <i class="icon icon-users"></i>
+              <i class="icon icon-users-empty"></i>
             </div>
             <h3 data-lid="menu_friends"></h2>
           </div>
@@ -188,7 +188,7 @@
         <li class="menu-item x--settings" data-link="settings">
           <div class="menu-item__body">
             <div class="menu-item__icon">
-              <i class="icon icon-cog x--round-icon"></i>
+              <i class="icon icon-cog-empty x--round-icon"></i>
             </div>
             <h3 data-lid="menu_settings"></h2>
           </div>
@@ -215,7 +215,7 @@
         <div class="me">
           <div class="me-item" data-param="name">
             <div class="icon-item">
-              <i class="icon icon-pricetag"></i>
+              <i class="icon icon-pricetag-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -236,7 +236,7 @@
           </div>
           <div class="me-item" data-param="age">
             <div class="icon-item x--round-icon">
-              <i class="icon icon-birthday"></i>
+              <i class="icon icon-birthday-cake-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -257,7 +257,7 @@
           </div>
           <div class="me-item x--no-edit">
             <div class="icon-item">
-              <i class="icon icon-flag"></i>
+              <i class="icon icon-flag-empty"></i>
             </div>
             <div class="me-item-body">
               <label for="me__country" data-lid="p_country_label"></label>
@@ -267,7 +267,7 @@
           </div>
           <div class="me-item" data-param="job">
             <div class="icon-item x--round-icon">
-              <i class="icon icon-education"></i>
+              <i class="icon icon-education-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -288,7 +288,7 @@
           </div>
           <div class="me-item" data-param="location">
             <div class="icon-item">
-              <i class="icon icon-location-barred"></i>
+              <i class="icon icon-location-barred-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -309,7 +309,7 @@
           </div>
           <div class="me-item" data-param="ideal_night">
             <div class="icon-item">
-              <i class="icon icon-dj"></i>
+              <i class="icon icon-dj-empty"></i>
             </div>
             <div class="edit">
               <i class="icon icon-pen"></i>
@@ -394,7 +394,7 @@
           <div class="settings-item x--no-border" data-settings-type-id="contact_email">
             <div class="settings-input">
               <div class="settings-input__icon x--round-icon">
-                <i class="icon icon-arobat"></i>
+                <i class="icon icon-inbox"></i>
               </div>
               <div class="settings-input-label">
                 <input readonly placeholder="ben@mymail.com" id="settings__contact-email" type="text">
@@ -461,7 +461,7 @@
           </div> -->
           <div class="settings-item" data-settings-type-id="newsletter">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-mail"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-mail-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_notifs_newsletter_label"></div>
               </div>
@@ -496,7 +496,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_message">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-bubble"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-bubble-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_message_label"></div>
               </div>
@@ -509,7 +509,7 @@
           </div>
         <div class="settings-item" data-settings-type-id="marked_as_host">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-star"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-star-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_marked_as_host_label"></div>
               </div>
@@ -522,7 +522,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_match">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-thunder-right"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-thunder-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_match_label"></div>
               </div>
@@ -535,7 +535,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_cheers">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-meedrink"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-meedrink-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_cheers_label"></div>
               </div>
@@ -554,7 +554,7 @@
         <div class="settings x--ux" data-link="ux">
           <div class="settings-item" data-settings-type-id="message_seen">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-read"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-chat-read-empty"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_message_seen_label"></div>
               </div>
@@ -567,7 +567,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="show_gender">
             <div class="settings-input">
-            <div class="settings-input__icon x--round-icon"><i class="icon icon-gender"></i></div>
+            <div class="settings-input__icon x--round-icon"><i class="icon icon-gender-empty-ter"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_gender_label" ></div>
               </div>
@@ -580,7 +580,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="show_country">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-planet"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-planet-empty-bis"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_country_label"></div>
               </div> 
@@ -593,11 +593,11 @@
           </div>
           <div class="settings-item" data-settings-type-id="auto_login">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-refresh"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-refresh-bis"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_ux_auto_login_label"></div>
               </div>
-              <div class="toggle">
+              <div class="toggle"> 
                 <div class="toggle__background"></div>
                 <div class="toggle__button"></div>
               </div>
@@ -606,9 +606,9 @@
           </div>
           <div class="settings-item">
             <div class="settings-input">
-              <div class="settings-input__icon x--round-icon"><i class="icon icon-flag"></i></div>
+              <div class="settings-input__icon x--round-icon"><i class="icon icon-flag-empty"></i></div>
               <div class="settings-input-label">
-                <div class="settings-input__label" data-lid="settings_ux_changelang_label"></div>
+                <div class="settings-input__label x--settings-btn" data-lid="settings_ux_changelang_label"></div>
               </div>
                <button class="settings__button x--changelang js-changelang" data-lid="settings_ux_changelang_button"></button>
             </div>
