--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -65,6 +65,7 @@
   <link rel="stylesheet" href="/css/src/pictures/pictures.css">
   <link rel="stylesheet" href="/css/src/thumbnail/thumbnail.css">
   <link rel="stylesheet" href="/css/src/rosace/rosace.css">
+  <link rel="stylesheet" href="/css/src/hive/hive.css">
   <link rel="stylesheet" href="/css/src/search/search.css">
   <link rel="stylesheet" href="/css/src/search/search_filters.css">
   <link rel="stylesheet" href="/css/src/seek/seek.css">
