--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -273,6 +273,11 @@
     margin-right: 6px;
     font-size: 13.5px;
     letter-spacing: -.2px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 240px;
+    display: inline-block;
 }
 
 .chat-row-infos__preview {
