--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -540,3 +540,16 @@
 .chat-inview-seen-by i {
     margin-left: 2px;
 }
+
+.chat-inview-footer button {
+    flex-shrink: 0;
+    width: 100px;
+    margin-right: 10px;
+    color: #0084ff;
+    background: white;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 14px;
+    font-weight: 600;
+    display: none;
+}
