--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -379,7 +379,7 @@ button:hover {
 .action .action__cancel {
     background: white;
     color: #1b69ec;
-    border-color: inherit;
+    border-color: #1b69ec;
 }
 
 .icon-item {
@@ -1426,6 +1426,7 @@ button:hover {
     z-index: 100;
     height: 500px;
     box-shadow: 0 0 14px #949494;
+    overflow: scroll;
 }
 
 .slide.x--facebook {}
