--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -35,11 +35,11 @@
     flex-flow: row wrap;
     height: 170px;
     width: 170px;
-    background: rgba(79, 130, 226, 0.33);
     top: 10px;
     position: absolute;
     opacity: 0;
     cursor: pointer;
+    display: none;
 }
 
 
@@ -60,9 +60,10 @@
    border: 1px solid;
    position: relative;
    cursor: pointer;
+   background: rgba(79, 130, 226, 0.33);
 }
 .picture__icon:hover {
-    background: rgba(255,255,255,.2);
+    background: rgba(81, 133, 232, 0.28);
 }
 .picture__icon.x--mainify {}
 .picture__icon.x--upload-facebook {}
