--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -1,4 +1,10 @@
-.be-browser {width: 100%;height: 100%;display: flex;justify-content: center;align-items: center;}
+.be-browser {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .be-browser .jspPane {
     flex-wrap: nowrap;
@@ -62,8 +68,8 @@
 
 .be-address span {
     margin: 0 2px;
-}  
-   
+}
+
 .be-dates__bar {
     width: 98px;
     border-radius: 100px;
@@ -115,7 +121,13 @@
 span.be-dates__offset {
     /* margin-top: 10px; */
 }
-span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-bottom: 10px;}
+
+span.be-dates__count {
+    font-weight: 400;
+    margin-left: 6px;
+    font-size: 10px;
+    margin-bottom: 10px;
+}
 
 .be-create__loader {
     position: absolute;
@@ -151,6 +163,10 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     z-index: 10;
     display: none;
     flex: 1;
+    overflow: hidden;
+}
+
+.be-inview.x--flat {
     overflow: hidden;
 }
 
@@ -190,8 +206,12 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     /* color: white; */
     font-size: 26px;
     z-index: 101;
+    padding-left: 2px;
 }
 
+.be-inview.x--hive .be-actions {
+    display: flex;
+}
 .be-actions__action {
     border: 2px solid white;
     height: 36px;
@@ -203,6 +223,13 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
 
 .be-actions__action:hover {
     opacity: .8;
+}
+
+.be-actions__action.x--switch {
+}
+
+.be-actions__action.x--switch i {
+    font-size: .8em;
 }
 
 .be-actions__action.x--share {}
@@ -247,7 +274,7 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 100%;
-} 
+}
 
 .be-inview-address__address span {
     white-space: nowrap;
@@ -275,7 +302,7 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     position: relative;
 }
 
-.user-row { 
+.user-row {
     display: flex;
     align-items: center;
     padding: 12px 20px;
@@ -290,7 +317,6 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
 .user-row:hover {
     background: #fbfbfb;
 }
-
 
 .user-row:last-of-type {
     border-bottom: none;
@@ -329,15 +355,13 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     border: 2px solid white;
 }
 
-
 .user-row .pictures-overlay {
     border-radius: 100px;
 }
 
 .be-inview .user-country {}
 
-.be-inview .user-country i {
-}
+.be-inview .user-country i {}
 
 .user-row__about {
     display: flex;
@@ -391,8 +415,21 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
 .be-ended {
     order: 1;
     height: 150px;
+    width: 100%;
     display: flex;
     margin-top: auto;
+    position: fixed;
+    bottom: 0;
+}
+
+.be-inview.x--flat .be-request,
+.be-inview.x--flat .be-ended {
+    background: linear-gradient(transparent, white);
+    width: 100%;
+    height: 130px;
+    z-index: 10;
+    position: fixed;
+    bottom: 0;
 }
 
 .be-request button {
@@ -454,7 +491,7 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     font-weight: 500;
     font-size: 12px;
 }
-  
+
 .be-ended span {
     padding: 14px 20px;
     color: #d94962;
@@ -524,7 +561,6 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     font-size: 12px;
 }
 
-
 .be-usernames {
     color: #1b69ec;
     font-family: 'creamy';
@@ -538,7 +574,7 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
 .be-usernames span {
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 220px;
+    max-width: 240px;
     white-space: nowrap;
 }
 
@@ -548,12 +584,131 @@ span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-b
     padding: 0;
     flex-shrink: 0;
     margin: 0 auto;
+    cursor: pointer;
+}
+
+.be-inview.x--hive .be-pictures img {
+    transition: all ease-in .15s;
+}
+
+.be-inview .hive__picture:hover img,
+.hive__background:hover~div img {
+    transform: scale(1.2);
 }
 
 .be-inview-address__icon {
     margin-right: 4px;
 }
 
-.be-inview-address__icon i {
-    
+.be-inview-address__icon i {}
+
+.flat-users {
+    overflow: scroll;
 }
+
+.user-flat {
+    display: flex;
+    flex-flow: column nowrap;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.user-flat:first-of-type {
+    margin-top: 30px;
+}
+
+.user-flat:last-of-type {
+    margin-bottom: 110px;
+}
+
+.flat-user-body {
+    height: 54px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.flat-user__pic {
+    position: relative;
+    width: 75%;
+    border-radius: 4px;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.flat-user__pic img {
+    width: 100%;
+    height: 100%;
+    transition: all ease-in .15s;
+}
+
+.flat-user__pic:hover img {
+    /* transform: scale(1.1); */
+}
+
+.flat-user__pic .pictures-overlay {
+    border-radius: 4px;
+}
+
+.flat-user__h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flat-user__h2 {
+    display: flex;
+    color: #919191;
+    font-size: 12px;
+}
+
+.user-flat .comma {
+    margin: 0 4px;
+}
+
+.flat-user__gender {
+    display: none;
+}
+
+.flat-user__age {}
+
+.flat-user__name {
+    font-weight: 700;
+    font-size: 30px;
+    font-family: 'creamy';
+    font-weight: 400;
+}
+
+.flat-user__country {
+    display: none;
+}
+
+.flat-user-actions {
+    position: absolute;
+    right: 50px;
+    bottom: 62px;
+    font-size: 20px;
+    color: #1b69ec;
+    cursor: pointer!important;
+    z-index: 1;
+}
+
+.flat-user__action {
+    height: 34px;
+    width: 34px;
+    color: white;
+    border: 2px solid;
+    cursor: pointer;
+}
+
+.flat-user__action i {}
+
+.flat-user-job {}
+
+.flat-user-job i {}
+
+.flat-user__job {}
