--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -158,14 +158,14 @@
 
 .invite-friends-popup {
     position: fixed;
-    bottom: 30px;
+    bottom: 0;
     right: 30px;
     z-index: 100;
     font-size: 12px;
     height: 100px;
     background: white;
     border: 1px solid #f7f7f7;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.27);
     justify-content: center;
     align-items: center;
     padding: 0 20px;
@@ -188,7 +188,8 @@
     right: 6px;
     top: 6px;
     cursor: pointer;
-    color: #919191;
+    color: #3b5998;
+    font-size: 8px;
 }
 
 .invite-friends-popup__close i {}
@@ -222,7 +223,7 @@
 .invite-friends-popup__btn button {
     height: 40px;
     width: 150px;
-    border-radius: 6px;
+    border-radius: 50px;
     color: white;
     background: #3b5998;
 }
