--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -842,6 +842,7 @@
   <script src="js/src/map/map.js"></script>
   <script src="js/src/map/map_styles.js"></script>
   <script src="js/src/map/map_markers_url.js"></script>
+  <script src="js/src/map/map_city_locations.js"></script>
   <script src="js/src/connecter/connecter.js"></script>
   <script src="js/src/notifications/notifications.js"></script>
   <script src="js/src/onboarding/onboarding.js"></script> 
