--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -111,3 +111,4 @@
 .icon-feather:before { content: '\e86d'; } /* '' */
 .icon-female:before { content: '\e86e'; } /* '' */
 .icon-chat-read-empty:before { content: '\e86f'; } /* '' */
+.icon-switch-empty:before { content: '\e870'; } /* '' */
