--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -1664,7 +1664,7 @@ button:hover {
 .loader__overlay {
     height: 100%;
     width: 100%;
-    background: rgba(255, 255, 255, 0.66);
+    background: rgba(255, 255, 255, .5);
     position: absolute;
     z-index: 99;
     top: 0;
