--- a/public/css/src/hive/hive.css
+++ b/public/css/src/hive/hive.css
@@ -30,6 +30,7 @@
   bottom: 0;
   border: 2px solid #eee;
   border: 3px solid white;
+  cursor: pointer;
 }
 
 .hive.x--2 .hive__picture {
@@ -50,6 +51,8 @@
 .hive__picture img {
   width: 100%;
   height: 100%;
+  cursor: pointer;
+  transition: all ease-in .15s;
 }
 
 .hive__picture.x--2-top {
