fixed chat row name width

--- a/public/css/src/media.css
+++ b/public/css/src/media.css
@@ -236,7 +236,7 @@
     }
 
     .chat-row-infos__name .x--name {
-        width: 80px!important;
+        width: 80%!important;
     }
 
     .chat-row-pictures {
