--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -371,6 +371,11 @@
             </div>
           </div>
         </div>
+
+        <div class="profile-logout js-logout x--mb">
+          <h3 data-lid="mb_logout_btn"></h3>
+        </div>
+
       </section>
       <!-- Profile end -->
 
