--- a/public/css/src/media.css
+++ b/public/css/src/media.css
@@ -247,4 +247,22 @@
         width: 240px!important;
         height: 240px!important
     }
+
+    .empty {
+        min-height: 0!important;
+    }
+
+    .profile-logout {
+        order: 10;
+        height: 50px;
+        width: 220px;
+        border: 1px solid #1b69ec;
+        color: #1b69ec;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: -50px;
+        font-size: 14px;
+        font-weight: 600;
+    }
 }
